docs/versioned_docs/version-0.3.x/reference/configuration.md
# Configuration File

Permify offers various options for configuring your Permify API Server. 

Here is the example configuration YAML file with glossary below. You can also find this [example config file](https://github.com/Permify/permify/blob/master/example.config.yaml) in Permify repo.

***Example config.yaml file***

```yaml
server:
  http:
    enabled: true
    port: 3476
    tls:
      enabled: true
      cert: /etc/letsencrypt/live/yourdomain.com/fullchain.pem
      key: /etc/letsencrypt/live/yourdomain.com/privkey.pem
  grpc:
    port: 3478
    tls:
      enabled: true
      cert: /etc/letsencrypt/live/yourdomain.com/fullchain.pem
      key: /etc/letsencrypt/live/yourdomain.com/privkey.pem

logger:
  level: 'info'

profiler:
  enabled: true
  port: 6060

authn:
  method: preshared
  enabled: false
  keys: []

tracer:
  exporter: 'zipkin'
  endpoint: 'http://localhost:9411/api/v2/spans'
  enabled: true

meter:
  exporter: 'otlp'
  endpoint: 'localhost:4318'
  enabled: true

service:
  circuit_breaker: false
  schema:
    cache:
      number_of_counters: 1_000
      max_cost: 10MiB
  permission:
    concurrency_limit: 100
    cache:
      number_of_counters: 10_000
      max_cost: 10MiB
  relationship:

database:
  engine: 'postgres'
  uri: 'postgres://user:password@host:5432/db_name'
  auto_migrate: false
  max_open_connections: 20
  max_idle_connections: 1
  max_connection_lifetime: 300s
  max_connection_idle_time: 60s
  garbage_collection:
    enable: true
    interval: 3m
    timeout: 3m
    window: 720h
    number_of_threads: 1
```

## Options

<details><summary>server | Server Configurations</summary>
<p>

#### Definition
Server options to run Permify. (`grpc` and `http` available for now.)

#### Structure
```
├── server
    ├── (`grpc` or `http`)
    │   ├── enabled
    │   ├── port
    │   └── tls
    │       ├── enabled
    │       ├── cert
    │       └── key
```

#### Glossary

| Required | Argument | Default | Description |
|----------|----------|---------|---------|
| [x]   | [ server_type ] | - | server option type can either be `grpc` or `http`.
| [ ]   | enabled (for server type) | true | switch option for server.  |
| [x]   | port | - | port that server run on.
| [x]   | tls | - | transport layer security options. |
| [ ]   | enabled (for tls) | false | switch option for tls  |
| [ ]   | cert | - | tls certificate path.  |
| [ ]   | key | - | tls key pat  |

</p>
</details>

<details><summary>logger | Logging Options</summary>
<p>

#### Definition
Real time logs of authorization. Permify uses [zerolog] as a logger.

[zerolog]: https://github.com/rs/zerolog

#### Structure
```
├── logger
    ├── level
```

#### Glossary

| Required | Argument | Default | Description |
|----------|----------|---------|---------|
| [x]   | level  | info | logger levels: `error`, `warn`, `info` , `debug`

</p>
</details>

<details><summary>authn | Server Authentication</summary>
<p>

#### Definition

You can choose to authenticate users to interact with Permify API.

There are 2 authentication method you can choose: 

* [Pre Shared Keys](#pre-shared-keys)
* [OpenID Connect](#openid-connect)

#### Pre Shared Keys

On this method, you must provide a pre shared keys in order to identify yourself.

#### Structure
```
├── authn
|   ├── method
|   ├── enabled
|   ├── keys
```

#### Glossary

| Required | Argument | Default | Description |
|----------|----------|---------|---------|
| [x]   | method | - | Authentication method can be either `oidc` or `preshared`.
| [ ]   | enabled | true | switch option authentication config  |
| [x]   | keys | - | Private key/keys for server authentication. Permify does not provide this key, so it must be generated by the users.

#### OpenID Connect

Permify supports OpenID Connect (OIDC). OIDC provides an identity layer on top of OAuth 2.0 to address the shortcomings of using OAuth 2.0 for establishing identity. 

With this authentication method, you be able to integrate your existing Identity Provider (IDP) to validate JSON Web Tokens (JWTs) using JSON Web Keys (JWKs). By doing so, only trusted tokens from the IDP will be accepted for authentication.

#### Structure
```
├── authn
|   ├── method
|   ├── enabled
|   ├── client-id
|   ├── issuer
```

#### Glossary

| Required | Argument | Default | Description |
|----------|----------|---------|---------|
| [x]   | method | - | Authentication method can be either `oidc` or `preshared`.
| [ ]   | enabled | false | switch option authentication config  |
| [x]   | client_id | - | This is the client ID of the application you're developing. It is a unique identifier that is assigned to your application by the OpenID Connect provider, and it should be included in the JWTs that are issued by the provider.
| [x]   | issuer | - | This is the URL of the provider that is responsible for authenticating users. You will use this URL to discover information about the provider in step 1 of the authentication process. |


</p>
</details>


<details><summary>tracer | Tracing Configurations</summary>
<p>

#### Definition
Permify integrated with [jaeger] , [signoz] and [zipkin] tacing tools to analyze performance and behavior of your authorization when using Permify.
#### Structure
```
├── tracer
|   ├── exporter
|   ├── endpoint
|   ├── enabled
```

#### Glossary

| Required | Argument | Default | Description |
|----------|----------|---------|---------|
| [x]   | exporter | - | Tracer exporter, the options are `jaeger`, `signoz` and `zipkin`
| [x]   | endpoint | - | export uri for tracing data.  |
| [ ]   | enabled | false | switch option for tracing. 

</p>
</details>

<details><summary>meter | Meter Configurations</summary>
<p>

#### Definition
Configuration for observing metrics; check count, cache check count and session information; Permify version, hostname, os, arch. 

#### Structure
```
├── meter
|   ├── exporter
|   ├── endpoint
|   ├── enabled
```

#### Glossary

| Required | Argument | Default | Description |
|----------|----------|---------|---------|
| [x]   | exporter | - | [otpl](https://opentelemetry.io/docs/collector/) is default.
| [x]   | endpoint | - | export uri for metric observation  |
| [ ]   | enabled | true |  switch option for meter tracing.

</p>
</details>

<details><summary>database | Database (WriteDB) Configurations</summary>
<p>

#### Definition
Configurations for the database that points out where your want to store your authorization data (relation tuples, audits, decision logs, authorization model) 

#### Structure
```
├── database
|   ├── engine
|   ├── uri
|   ├── auto_migrate
|   ├── max_open_connections
|   ├── max_idle_connections
|   ├── max_connection_lifetime
|   ├── max_connection_idle_time
|   ├──garbage_collection
|       ├──enable: true
|       ├──interval: 3m
|       ├──timeout: 3m
|       ├──window: 720h
|       ├──number_of_threads: 1
```

#### Glossary

| Required | Argument                        | Default | Description |
|----------|---------------------------------|---------|---------|
| [x]   | engine                          | memory  | Data source. Permify supports **PostgreSQL**(`'postgres'`) for now. Contact with us for your preferred database.  
| [x]   | uri                             | -       | Uri of your data source.  |
| [ ]   | auto_migrate                    | true    |  When its configured as false migrating flow won't work 
| [ ]   | max_open_connections            | 20      | Configuration parameter determines the maximum number of concurrent connections to the database that are allowed. 
| [ ]   | max_idle_connections            | 1       |  Determines the maximum number of idle connections that can be held in the connection pool.
| [ ]   | max_connection_lifetime         | 300s    | Determines the maximum lifetime of a connection in seconds.
| [ ]   | max_connection_idle_time        | 60s     | Determines the maximum time in seconds that a connection can remain idle before it is closed.
| [ ]   | enable (for garbage collection) | false   | Switch option for garbage collection.  
| [ ]   | interval                        | 3m      | Determines the run period of a Garbage Collection operation. 
| [ ]   | timeout                         | 3m      | Sets the duration of the Garbage Collection timeout.
| [ ]   | window                          | 720h    | Determines how much backward cleaning the Garbage Collection process will perform.
| [ ]   | number_of_threads               | 1       | Limits how many threads Garbage Collection processes concurrently with.

</p>
</details>

<details><summary>profiler | Performance Profiler Configurations</summary>
<p>

#### Definition
pprof is a performance profiler for Go programs. It allows developers to analyze and understand the performance characteristics of their code by generating detailed profiles of program execution
#### Structure
```
├── meter
|   ├── enabled
|   ├── port
```

#### Glossary

| Required | Argument | Default | Description |
|----------|----------|---------|---------|
| [ ]   | enabled | true |  switch option for profiler.
| [x]   | port | - | port that profiler runs on *(default: 6060)*  |

</p>
</details>

[jaeger]: https://www.jaegertracing.io/
[zipkin]: https://zipkin.io/
[signoz]: https://signoz.io/
